# TestMahjong

./: Cargo.toml  README.md  \
src/: main.rs
src/bevy_client/: mahjong_client.rs  mod.rs
src/bevy_client/ui/: mod.rs  plugin_game_ui.rs  tile_button.rs
src/game/: container.rs  event.rs  event_data.rs  four_player_mahjong.rs  hands.rs  mod.rs  tiles.rs  wall.rs
src/game/hand_data/: call_info.rs  hand_block.rs  mod.rs
src/game/rand/: lehmer.rs  mod.rs
src/game/wall_implementation/: classic.rs  mod.rs  wall_generation.rs
src/visuals_tui/: ansi_codes.rs  display_example.rs  display_screen.rs  error.rs  error_parsing.rs  image_display.rs  image_display_message.rs  image_type.rs  input_event.rs  kitty_input.rs  message_utils.rs  mod.rs  utils.rs  window_size.rs
src/visuals_tui/image/: image_display.rs  image_type.rs  mod.rs
src/visuals_tui/message/: error.rs  error_parsing.rs  message_enum.rs  message_utils.rs  mod.rs  send.rs
src/visuals_tui/sprite/: mod.rs  relative_sprite.rs  simple_sprite.rs  vector2.rs
